--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-mat-select-search",
   "description": "Angular component providing an input field for searching / filtering MatSelect options of the Angular Material library.",
-  "version": "7.0.5",
+  "version": "7.0.6",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -24,6 +24,7 @@
   "keywords": [
     "angular",
     "angular 2",
+    "angular 17",
     "material",
     "MatSelect",
     "select",
@@ -35,41 +36,39 @@
     "@angular/material": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular-extensions/lint-rules": "^1.2.1",
-    "@angular/animations": "^15.0.1",
-    "@angular/cdk": "^15.0.0",
-    "@angular/cli": "^15.0.1",
-    "@angular/common": "^15.0.1",
-    "@angular/compiler": "^15.0.1",
-    "@angular/compiler-cli": "^15.0.1",
-    "@angular/core": "^15.0.1",
-    "@angular/forms": "^15.0.1",
-    "@angular/language-service": "^15.0.1",
-    "@angular/material": "^15.0.0",
-    "@angular/platform-browser": "^15.0.1",
-    "@angular/platform-browser-dynamic": "^15.0.1",
-    "@angular/router": "^15.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^12.20.52",
+    "@angular-devkit/build-angular": "^17.1.1",
+    "@angular/animations": "^17.1.1",
+    "@angular/cdk": "^17.1.1",
+    "@angular/cli": "^17.1.1",
+    "@angular/common": "^17.1.1",
+    "@angular/compiler": "^17.1.1",
+    "@angular/compiler-cli": "^17.1.1",
+    "@angular/core": "^17.1.1",
+    "@angular/forms": "^17.1.1",
+    "@angular/language-service": "^17.1.1",
+    "@angular/material": "^17.1.1",
+    "@angular/platform-browser": "^17.1.1",
+    "@angular/platform-browser-dynamic": "^17.1.1",
+    "@angular/router": "^17.1.1",
+    "@types/jasmine": "~5.1.4",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/node": "^20.11.10",
     "codelyzer": "^6.0.2",
-    "core-js": "^2.6.12",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.20",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "core-js": "^3.35.1",
+    "jasmine-core": "~5.1.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^15.0.1",
-    "rxjs": "^6.6.7",
-    "ts-node": "~7.0.1",
-    "tslint": "~6.1.0",
-    "typescript": "^4.8.4",
-    "zone.js": "^0.11.5"
+    "ng-packagr": "^17.1.2",
+    "rxjs": "^7.8.1",
+    "ts-node": "~10.9.2",
+    "typescript": "^5.3.3",
+    "zone.js": "^0.14.3"
   },
   "dependencies": {
-    "tslib": "^2.4.0"
+    "tslib": "^2.6.2"
   }
 }
